<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/p_colorful_bgraund_Alt"
        android:orientation="vertical"
        android:scrollbarTrackVertical="@drawable/s_tired_face_24"
        tools:context=".Sentimento">


        <Button
            android:id="@+id/buttonsave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <LinearLayout
            android:id="@+id/LL_int_1_1_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Como você está se sentindo hoje?"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Normal"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/LL_int_1_2_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Marque os sintomas que você está  sentindo:"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/txv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nada"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_tired_face_24"
                android:text="@string/s_1_Cansado"

                />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_dizzy_24"
                android:text="@string/s_2_Tonto"

                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LL_int_3h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_insomnia_24"
                android:text="@string/s_3_Insônia" />


            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_person_tired_24"
                android:text="@string/s_4_Fraqueza"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_4h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_zipper_mouth_face_24"
                android:text="@string/s_5_apetite" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_fever_24"
                android:text="@string/s_6_Febre" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_5h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_face_vomiting_24"
                android:text="@string/s_7_vomitar" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/s_8_Diarréia" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_6h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/s_9_estômago" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/s_10_corpo" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_7h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/s_11_pele" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/s_12_Coceira" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_8h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_shaking_24"
                android:text="@string/s_13_Tremores" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_hot_face_24"
                android:text="@string/s_14_vermelho" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_int_9h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/s_loudly_crying_face_24"
                android:text="@string/s_15_Tristeza" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:drawableLeft="@drawable/sleeping_face_24"
                android:text="@string/s_16_dormir" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/LL_int_1h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgbad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/head_bandage_face_96" />

            <ImageView
                android:id="@+id/imgwhatever"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@id/imgbad"
                android:src="@drawable/neutral_face_96" />

            <ImageView
                android:id="@+id/imggood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_toEndOf="@id/imgwhatever"
                android:src="@drawable/grinning_face_with_big_eyes_96" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:max="10"
            android:min="0"
            android:progress="0" />

    </LinearLayout>
</ScrollView>