<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/googleg_standard_color_18"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/editlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/sub"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/sub"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        android:ems="10"
        android:inputType="textPassword" />

    <GridLayout
        android:id="@+id/GL_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layoutMode="opticalBounds"
        android:layout_weight="0"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:contentDescription="@string/test"
            android:src="@drawable/health_graph" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:contentDescription="@string/test"
            android:src="@drawable/health_pill_96" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="start|top"
            android:contentDescription="@string/test"
            android:src="@drawable/health_calendar_96" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="start|top"
            android:contentDescription="@string/test"
            android:src="@drawable/health_reflection_96" />

    </GridLayout>

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="true"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:includeFontPadding="true"
        android:text="@string/pacientes"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewdoenca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="true"
        android:text="@string/test"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="true"
        android:text="@string/doenca"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorAccent"
        android:includeFontPadding="true"
        android:text="@string/dias"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="true"
        android:text="@string/dias"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:includeFontPadding="true"
        android:background="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/opcoes"
        android:textSize="24sp"
        android:textStyle="italic" />

</LinearLayout>