<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/p_colorful_back"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:visibility="visible"
    tools:context=".Opcoes">


    <GridLayout
        android:id="@+id/GL_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:layoutMode="opticalBounds"
        android:orientation="vertical"
        android:rowCount="2"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center"
            android:contentDescription="@string/test"
            android:src="@drawable/health_graph" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            android:contentDescription="@string/test"
            android:src="@drawable/health_pill_96" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center"
            android:contentDescription="@string/test"
            android:src="@drawable/health_calendar_96" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:contentDescription="@string/test"
            android:src="@drawable/health_reflection_96" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/LL_int_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:includeFontPadding="true"
            android:text="@string/doenca"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:includeFontPadding="true"
            android:text="@string/doenca"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_int_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:includeFontPadding="true"
            android:text="@string/dias"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:includeFontPadding="true"
            android:text="@string/sub"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL_int_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:includeFontPadding="true"
            android:text="@string/pacientes"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:includeFontPadding="true"
            android:text="@string/hello"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>